improved isValidateText